--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
   <html>
              <head>
                           <title>
-                              Гордієнко (Акініна) Оксана ТНІм-22
+                              Мозги Оксана ТНІм-22
                              </title>
           </head>
            <body>
