--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
            <body>
                                 Звіт про виконання домашніх завдань, студентки групи ТНІм-22 - Мозги Оксани
 
-                     <p><a href="ARindex.html"> Домашнє завдання 1 тижня <a/>
-                     <p><a href="ARindex_2.html"> Домашнє завдання 2 тижня <a/>
-                     <p><a href="week3/ARindex.html"> Домашнє завдання 3 тижня <a/>
+                     <p><a href="ARindex.html"> Тиждень 1 <a/>
+                     <p><a href="ARindex_2.html"> Тиждень 2  <a/>
+                     <p><a href="week3/ARindex.html"> Тиждень 3 <a/>
 
-                           <p><a href="week4/ARindex.html"> Домашнє завдання 4 тижня <a/>
-                           <p><a href="week5/SunSystem.html"> Домашнє завдання 5 тижня <a/>
-                           <p><a href="week6/ARindex6.html"> Домашнє завдання 6 тижня <a/>
-                           <p><a href="week7/dzweek7.html"> Домашнє завдання 7 тижня <a/>
-                           <p><a href="week8/week8.html"> Домашнє завдання 8 тижня <a/>
-                           <p><a href="week9/dzweek9.html"> Домашнє завдання 9 тижня <a/>
-                          <p><a href="week10/controls.html"> Домашнє завдання 10 тижня <a/>
-                                   <p><a href="week11/geo.html"> Домашнє завдання 11 тижня <a/>
-                                 <p><a href="week12/tm_exp2.html"> Домашнє завдання 12 тижня <a/>
+                           <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
+                           <p><a href="week5/SunSystem.html"> Тиждень 5 <a/>
+                           <p><a href="week6/ARindex6.html"> Тиждень 6 <a/>
+                           <p><a href="week7/dzweek7.html"> Тиждень 7 <a/>
+                           <p><a href="week8/week8.html"> Тиждень 8 <a/>
+                           <p><a href="week9/dzweek9.html"> Тиждень 9 <a/>
+                          <p><a href="week10/controls.html"> Тиждень 10 <a/>
+                                   <p><a href="week11/geo.html"> Тиждень 11 <a/>
+                                 <p><a href="week12/tm_exp2.html"> Тиждень 12 <a/>
 
 
             </body>
