--- a/ARindex_2.html
+++ b/ARindex_2.html
@@ -23,5 +23,6 @@ type: color; from: green; to: red; loop: true; dur: 10000">
 <a-plane
 src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg" width="7" height="7"
 rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane> 
- </a-scene>
+<a-text value="MO3HA OKCAHA" font="anotheronefont-msdf.json" negate="false" shader="msdf" color="black" width="10" position="-0.5 1 -6"></a-text>
+  </a-scene>
 </html> 
