--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                                 Звіт про виконання домашніх завдань, студентки групи ТНІм-22 - Мозги Оксани
 
                      <p><a href="ARindex.html"> Тиждень 1 <a/>
-                     <p><a href="ARindex_2.html"> Тиждень 2  <a/>
+                     <p><a href="ARindex2.html"> Тиждень 2  <a/>
                      <p><a href="week3/ARindex.html"> Тиждень 3 <a/>
 
                            <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
