--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                            <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
                            <p><a href="week5/SunSystem.html"> Тиждень 5 <a/>
                            <p><a href="week6/ARindex6.html"> Тиждень 6 <a/>
+                           <p><a href="triangle.js"> маркери <a/>
                            <p><a href="week7/dzweek7.html"> Тиждень 7 <a/>
                            <p><a href="week8/week8.html"> Тиждень 8 <a/>
                            <p><a href="week9/dzweek9.html"> Тиждень 9 <a/>
