--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
                            <p><a href="Marker.png"> маркер <a/>
                            <p><a href="week5/SunSystem.html"> Тиждень 5 <a/>
                            <p><a href="week6/ARindex6.html"> Тиждень 6 <a/>
-                           <p><a href="triangle.js"> маркери <a/>
+                           <p><a href="patt.a"> маркер  A <a/>
+                           <p><a href="patt.b"> маркер  B <a/>
+                           <p><a href="patt.c"> маркер  C <a/>
+                           <p><a href="patt.d"> маркер  D <a/>
+                           <p><a href="patt.f"> маркер  F <a/> 
                            <p><a href="week7/dzweek7.html"> Тиждень 7 <a/>
                            <p><a href="week8/week8.html"> Тиждень 8 <a/>
                            <p><a href="week9/dzweek9.html"> Тиждень 9 <a/>
