--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
                      <p><a href="ARindex.html"> Тиждень 1 <a/>
                      <p><a href="ARindex2.html"> Тиждень 2  <a/>
-                     <p><a href="week3/ARindex.html"> Тиждень 3 <a/>
+                     <p><a href="ARindex3.html"> Тиждень 3 <a/>
                      <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
                      <p><a href="Marker.png"> https://drive.google.com/drive/folders/1EENdceCujPpuR8verFT1GfMkTN6e3T-v?usp=share_link <a/>
                      <p><a href="week5/SunSystem.html"> Тиждень 5 <a/>
