--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                      <p><a href="ARindex2.html"> Тиждень 2  <a/>
                      <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
                      <p><a href="Marker.png"> https://drive.google.com/drive/folders/1EENdceCujPpuR8verFT1GfMkTN6e3T-v?usp=share_link <a/>
-                     <p><a href="week5/SunSystem.html"> Тиждень 5 <a/>
+                     <p><a href="ARindex5.html"> Тиждень 5 <a/>
                      <p><a href="week6/ARindex6.html"> Тиждень 6 <a/>
                      <p><a href="week7/dzweek7.html"> Тиждень 7 <a/>
                      <p><a href="week8/week8.html"> Тиждень 8 <a/>
