--- a/week6/ARindex6.html
+++ b/week6/ARindex6.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <a-scene embedded arjs ='trackingMethod: best;' >
-<a-marker type="pattern" url= "../patt.a"  id="A" registerevents>
+<a-marker type="pattern" url= "../assets/pattern-letterA.patt"   id="A" registerevents>
 <a-sphere radius="0.10" color="red"></a-sphere>
  <a-entity id="lineAB"></a-entity>
  </a-marker>
