--- a/week7/week7.html
+++ b/week7/week7.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>DZ week 7.js app</title>
+		<title> week7.js app</title>
 		<style>
 			body { margin: 0; }
 		</style>
