--- a/week9/week9.html
+++ b/week9/week9.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>DZ week 9.js app</title>
+		<title> week 9.js app</title>
 		<style>
 			body { margin: 0; }
 		</style>
