--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                      <p><a href="week4/ARindex.html"> Тиждень 4 <a/>
                      <p><a href="ARindex5.html"> Тиждень 5 <a/>
                      <p><a href="ARindex6.html"> Тиждень 6 <a/>
-                     <p><a href="week7/ARindex7.html"> Тиждень 7 <a/>
+                     <p><a href="ARindex7.html"> Тиждень 7 <a/>
                      <p><a href="week8/week8.html"> Тиждень 8 <a/>
                      <p><a href="week9/week9.html"> Тиждень 9 <a/>
                      <p><a href="week10/controls.html"> Тиждень 10 <a/>
