--- a/week10/controls.html
+++ b/week10/controls.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>DZ week 10 .js app</title>
+		<title> week 10 .js app</title>
 		<style>
 			body { margin: 0; }
 		</style>
